# agentic-soc

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
agents/: Dockerfile  pyproject.toml
agents/critic/: __init__.py
agents/investigation/: __init__.py
agents/runtime/: action_executor.py  critic_agent.py  execution_tracer.py  investigation_agent.py  investigation_tools.py  memory.py  observability.py  playbook_engine.py  server.py  slack_notifier.py  tools.py  triage_agent.py
agents/runtime/integrations/: __init__.py  auth_adapter.py  base.py  infra_adapter.py  notification_adapter.py  registry.py  stripe_adapter.py  traefik_adapter.py
api/: Dockerfile  pyproject.toml
api/app/: config.py  main.py
api/app/auth/: jwt.py  middleware.py  rbac.py
api/app/models/: __init__.py  ai_agent.py  alert.py  base.py  tenant.py
api/app/routes/: actions.py  admin.py  ai_agents.py  alerts.py  analytics.py  auth.py  health.py  ws.py  (+4 more)
dashboard/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
db/: init.sql
mcp-servers/: Dockerfile  abuseipdb_tools.py  aws_tools.py  clerk_tools.py  langfuse_tools.py  neo4j_tools.py  pyproject.toml  seed_graph.py  server.py  sploitus_tools.py  wazuh_tools.py
modules/: Dockerfile  pyproject.toml
modules/ai_agent_monitor/: __init__.py  module.py
modules/auth_anomaly/: module.py
modules/engine/: base_module.py  models.py  registry.py  runner.py
modules/infrastructure/: module.py
modules/recon/: module.py
modules/stripe_carding/: module.py
monitoring/: prometheus.yml
simulator/: e2e_test.py  pyproject.toml  validation_mode.py  verify.py
simulator/scenarios/: ai_agent_attack.py  auth_brute_force.py  false_positive.py  iam_escalation.py  recon_scan.py  stripe_carding.py
traefik/: traefik.yml
traefik/dynamic/: routes.yml
(+30 files in other folders)
