[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-soc-agents"
version = "0.1.0"
description = "Agentic SOC v5 — LangGraph Reasoning Agents"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "redis[hiredis]>=5.2.0",
    "asyncpg>=0.30.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]
