[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-soc-mcp"
version = "0.1.0"
description = "Agentic SOC v5 — MCP Tool Servers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "neo4j>=5.26.0",
    "redis[hiredis]>=5.2.0",
    "stripe>=11.0.0",
    "pydantic>=2.10.0",
    "structlog>=24.4.0",
]
