[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["engine*", "stripe_carding*", "auth_anomaly*", "infrastructure*", "ai_agent_monitor*"]

[project]
name = "agentic-soc-modules"
version = "0.1.0"
description = "Agentic SOC v5 — Streaming Detection Modules"
requires-python = ">=3.11"
dependencies = [
    "redis[hiredis]>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "uvicorn>=0.32.0",
    "fastapi>=0.115.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
